syntax = "proto3";

option csharp_namespace = "Crypto.Protos.Wallets";

package wallets;


service WalletProtoService {
  //create wallet
  rpc CreateWallet(CreateUserWalletRequest) returns (CreateUserWalletResponse);
  //load wallet
  rpc LoadWallet(LoadUserWalletRequest) returns (CreateUserWalletResponse);
  //getting wallet info
  rpc GetWallet(GetUserWalletRequest) returns (GetUserWalletResponse);
}

//creating wallet message
message CreateUserWalletRequest {
  //User password
  string password = 1;
  //Email username
  string email = 2;
}
//created wallet with address and private key response
message CreateUserWalletResponse {
  //account id
  string id = 1;
  //account address
  string address = 2;
  //wallet private key
  string privateKey = 3;
}
//loading wallet message
message LoadUserWalletRequest {
  string email = 1;
  string password = 2;
  string privateKey = 3;
}
//getting wallet message
message GetUserWalletRequest {
  //load wallet for user by id
  string id = 1;
}
//getting wallet response
message GetUserWalletResponse {
  //wallet balance
  double balance = 1;
  //account address
  string address = 2;
  //wallet private key
  string privateKey = 3;
}